# react-native-turbomodule-tscodegen

./: .gitignore  CONTRIBUTING.md  MultiplyModule.podspec  README.md  package.json  react-native-multiply-module.podspec  react-native-tscodegen.json  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativemultiplymodule/: MultiplyModuleModule.java  MultiplyModuleModule.kt  MultiplyModulePackage.java  MultiplyModulePackage.kt  NativeProxy.java
cpp/: Logging.h  TurboUtilsModule.cpp  TurboUtilsModule.h  react-native-multiply-module.cpp  react-native-multiply-module.h  rust_multiply.h
example/: app.json  package.json
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/example/reactnativemultiplymodule/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/reactnativemultiplymodule/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/MultiplyModuleExample/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/MultiplyModuleExample.xcodeproj/: project.pbxproj
example/ios/MultiplyModuleExample.xcodeproj/xcshareddata/xcschemes/: MultiplyModuleExample.xcscheme
example/ios/MultiplyModuleExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: MultiplyModule.h  MultiplyModule.mm
ios/MultiplyModule.xcodeproj/: project.pbxproj
ios/provider/: TurboModuleProvider.cpp
lib/cpp-generated/: NativeModules.cpp  NativeModules.h
multiply/: Cargo.toml  Makefile
multiply/src/: lib.rs
src/: index.ts  index.tsx  turboModule.ts
